--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .banner {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     border-bottom-left-radius: 100px;
     border-bottom-right-radius: 100px;
     background-size: cover;
@@ -184,6 +184,13 @@ body {
     color: #fff;
 }
 
+.textura-fundo {
+    background-image: url('source/fundo30.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 /* Imagem de fundo fixa */
 .imagem-fundo {
     position: fixed;
@@ -269,6 +276,7 @@ body {
     position: relative;
     text-align: center;
     color: #fff;
+    margin-top: 3rem;
 }
 
 .hero-video-wrapper {
@@ -965,13 +973,11 @@ body {
 /* About Us Page */
 .about-page {
     padding: 80px 5%;  
-    
 }
 
 .about-header {
     text-align: center;
     margin-bottom: 70px;
-    
 }
 
 .about-header h1 {
@@ -989,7 +995,6 @@ body {
 .about-image {
     flex: 0 0 350px; 
     max-width: 350px;
-    /* transform: translateY(-50%); */
 }
 
 .about-image img {
@@ -1001,19 +1006,20 @@ body {
 
 .about-text {
     flex: 1;
-    /* transform: translateY(-50%); */
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.289);
 }
 
 .about-text h2 {
     font-size: 2.2rem;
-    color: #FFB9CD;
-    
+    color: #e83e8c;
 }
 
 .about-text p {
     font-size: 1.1rem;
     line-height: 1.7;
-    
 }
 
 .about-values-section {
@@ -1024,7 +1030,6 @@ body {
 .about-values-section h2 {
     font-size: 2.5rem;
     margin-bottom: 150px;
-    
 }
 
 .values-grid {
